--- a/style.css
+++ b/style.css
@@ -195,6 +195,10 @@ a:hover {
     width: 90%;
 }
 
+.card-container a {
+    text-decoration: none;
+}
+
 .card {
     width: 300px;
     height: 300px;
@@ -203,16 +207,16 @@ a:hover {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #60e1e0;
-    background-image: url('./assets/background.jpg');
+    background-color: #b70b80;
+    /* background-image: url('./assets/background.jpg');
     background-position: center;
     background-size: cover;
-    background-repeat: no-repeat;
+    background-repeat: no-repeat; */
     filter: grayscale(0.5);
     cursor: pointer;
     transform: scale(1.1);
     transition: 0.5s ease-in-out;
-    color: #ffffff;
+    color: black;
 
 }
 
@@ -285,6 +289,40 @@ a:hover {
 .container-data-img img {
     margin-left: 25vw;
     width: 30vw;
+}
+
+.perfil-img {
+    margin-top: 10vh;
+}
+
+.main-projects {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 5vw;
+    min-height: 85vh;
+    max-width: 80%;
+    margin: 0 auto;
+}
+
+.main-projects h3, p{
+    text-align: center;
+}
+
+.main-projects a {
+    text-decoration: none;
+    color: #d86c8f;
+}
+
+.main-projects img {
+    width: 15vw;
+    
+}
+
+.card-bs {
+    background-color: pink;
+    padding: 1vw;
 }
 
 .footer {
