--- a/style.css
+++ b/style.css
@@ -380,6 +380,11 @@ header {
     
 }
 
+.image{
+    width: 20vw;
+    height: 14vh;
+}
+
 #btn-languages{
     background-color: purple;
     color: #fff;
