--- a/style.css
+++ b/style.css
@@ -313,6 +313,43 @@ a:hover {
     width: 30vw;
 }
 
+#div-cv{
+    margin-top: 2vh;
+}
+
+#cv {
+    background-color: aqua;
+    width: 13vw;
+    height: 6vh;
+    margin-top: 3vh;
+    padding: 15px 32px;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 1.2rem;
+    margin: 4px 2px;
+    cursor: pointer;
+    border: none;
+    border-radius: 4px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    transition: box-shadow 0.3s ease-in-out;
+
+}
+
+#cv:hover{
+    background-color: rgb(3, 187, 187);
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.3), 0 12px 40px 0 rgba(0, 0, 0, 0.29);
+}
+
+#cv:active{
+    background-color: aqua;
+}
+
+#cv a{
+    text-decoration: none;
+    color: black;
+    font-weight: 700;
+    
+}
 
 header {
     background-color: var(--main-color);
