--- a/style.css
+++ b/style.css
@@ -455,6 +455,14 @@ header {
     opacity: .5;
 }
 
+#logo-whatsapp{
+    width: 5vw;
+    right: 3vw;
+    top: 82vh;
+    position: fixed;
+    margin: 0;
+}
+
 .footer {
     width: 100%;
     height: 100px;
